--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     {% block navigation %}
     <div id="site_nav">
       <div class="nav_item">
-	<a href="/">Add another workout</a>
+	<a href="/new">Add another workout</a>
       </div>
       <div class="nav_item">
 	<a href="/search">Search workouts</a>
