--- a/templates/index.html
+++ b/templates/index.html
@@ -3,19 +3,15 @@
 {% block content %}
 
 
-  <form action="submit" method="get">
-    Workout<br>
-    <textarea name="wod" id="wod" row="5" cols="50">
+  <form action="wod_submit" method="get">
+    WOD Name: <input type="text" name="name" id="name" ><br>
+    Date (dd/mm/yyyy): <input type="text" name="date" id="date" ><br>
+    Description <br>
+    <textarea name="wod" id="wod" rows="10" cols="50">
     </textarea><br>
-   <input type="checkbox" name="equipment" value="False" id="equipment">
-   No Equipment Required?<br><br>
-
-    Name: <input type="text" name="name" id="name" ><br>
-    Score: <input type="text" name="score" id="score" ><br>
-    Additional Comments<br
-    <textarea name="comments" id="comments" row="5" cols="50">
-    </textarea><br>
-
+    Tags (comma separated): <input type="text" name="tags" id="tags" ><br>
+    Equipment Free? <input type="checkbox" name="equipment" value="False" id="equipment"><br>
+    
    <input type="submit" value="Submit">
   </form>
     
